--- a/.argo-ci/ci.yaml
+++ b/.argo-ci/ci.yaml
@@ -13,7 +13,7 @@ spec:
     - {name: app-org, value: argoproj}
     - {name: app-repo, value: argo-cd-hello-world-app}
     - {name: config-revision, value: master}
-    - {name: config-repo, value: "https://github.com/argoproj/argo-cd-hello-world-config.git"}
+    - {name: config-repo, value: "https://github.com/rashcuva/HelloWorld.git"}
     - {name: argo-cd-sync-timeout, value: 600}
   volumes:
   - name: docker-cred
